# Shensist-Agent-V7

./: .gitignore  LICENSE  README.md  fix_push.sh  github_push.sh  launch_engine.sh  start_brain.sh  test.xlsx  启动神思.sh  神思智能体.desktop
config/: Modelfile
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
zeroclaw_v7_core/: Cargo.toml
zeroclaw_v7_core/src/: main.rs
